arm64: Add fiq_glue stub
Adds header file and config option that can be selected when an
implementation of the api is available.

Change-Id: I9c70840eb9c7c8ac67095d146079fc8e6145fb3b
Signed-off-by: Arve Hjønnevåg <arve@android.com>

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -116,6 +116,9 @@ config ILLEGAL_POINTER_VALUE
 config LOCKDEP_SUPPORT
 	def_bool y
 
+config FIQ_GLUE
+	bool
+
 config TRACE_IRQFLAGS_SUPPORT
 	def_bool y
 
