msm: ep_pcie: add PCIe endpoint driver
The MSM PCIe endpoint driver enables the PCIe core in endpoint mode
and handles the control signaling with PCIe root complex on host
side.

Change-Id: Ifc2735e061820762c6040eda44089a2dc26fc065
Signed-off-by: Yan He <yanhe@codeaurora.org>

--- a/drivers/platform/msm/Makefile
+++ b/drivers/platform/msm/Makefile
@@ -14,6 +14,7 @@ obj-$(CONFIG_USB_BAM) += usb_bam.o
 obj-$(CONFIG_I2C_MSM_PROF_DBG) += i2c-msm-prof-dbg.o
 obj-$(CONFIG_IPA) += ipa/
 obj-$(CONFIG_SPS) += sps/
+obj-$(CONFIG_EP_PCIE) += ep_pcie/
 obj-$(CONFIG_QPNP_POWER_ON) += qpnp-power-on.o
 obj-$(CONFIG_QPNP_VIBRATOR) += qpnp-vibrator.o
 obj-$(CONFIG_QPNP_CLKDIV) += qpnp-clkdiv.o
