--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -543,7 +543,10 @@ config SRAM
 
 config UID_SYS_STATS
 	bool "Per-UID statistics"
-	depends on PROFILING && TASK_XACCT && TASK_IO_ACCOUNTING
+	depends on PROFILING
+	select TASKSTATS
+	select TASK_XACCT
+	select TASK_IO_ACCOUNTING
 	help
 	  Per UID based cpu time statistics exported to /proc/uid_cputime
 	  Per UID based io statistics exported to /proc/uid_io
