--- a/arch/arm64/configs/kitakami_karin_windy_defconfig
+++ b/arch/arm64/configs/kitakami_karin_windy_defconfig
@@ -698,3 +698,8 @@ CONFIG_HZ=300
 CONFIG_STATE_NOTIFIER=y
 # CONFIG_QUICK_WAKEUP is not set
 CONFIG_ARM64_FLUSH_CONSOLE_ON_RESTART=y
+CONFIG_CRYPTO_SHA256_ARM64=y
+CONFIG_CRYPTO_SHA512_ARM64=y
+CONFIG_CRYPTO_CRC32_ARM64=y
+CONFIG_CRYPTO_CRC32_ARM64_CE=y
+CONFIG_CRYPTO_POLY_HASH_ARM64_CE=y
