--- a/arch/arm/boot/dts/qcom/msm8994.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994.dtsi
@@ -1142,6 +1142,7 @@
 		interrupts = <0 123 0>, <0 138 0>;
 		interrupt-names = "hc_irq", "pwr_irq";
 
+		qcom,large-address-bus;
 		qcom,bus-width = <8>;
 		qcom,cpu-dma-latency-us = <301 70>;
 		qcom,cpu-affinity = "affine_cores";
@@ -1182,6 +1183,7 @@
 		clocks = <&clock_gcc clk_gcc_sdcc2_ahb_clk>,
 			 <&clock_gcc clk_gcc_sdcc2_apps_clk>;
 
+		qcom,large-address-bus;
 		qcom,bus-width = <4>;
 		qcom,cpu-dma-latency-us = <301 70>;
 		qcom,cpu-affinity = "affine_cores";
@@ -1217,6 +1219,7 @@
 		clocks = <&clock_gcc clk_gcc_sdcc3_ahb_clk>,
 			 <&clock_gcc clk_gcc_sdcc3_apps_clk>;
 
+		qcom,large-address-bus;
 		qcom,bus-width = <4>;
 		qcom,cpu-dma-latency-us = <301 70>;
 		qcom,cpu-affinity = "affine_cores";
