ARM64: diffconfig: Force flush the console on restart

--- a/arch/arm64/configs/kitakami_karin_windy_defconfig
+++ b/arch/arm64/configs/kitakami_karin_windy_defconfig
@@ -696,4 +696,5 @@ CONFIG_MSM8994_CPU_VOLTAGE_CONTROL=y
 CONFIG_HZ_300=y
 CONFIG_HZ=300
 CONFIG_STATE_NOTIFIER=y
-CONFIG_QUICK_WAKEUP=y
+# CONFIG_QUICK_WAKEUP is not set
+CONFIG_ARM64_FLUSH_CONSOLE_ON_RESTART=y
