defconfig : karin : update config

--- a/arch/arm64/configs/kitakami_karin_defconfig
+++ b/arch/arm64/configs/kitakami_karin_defconfig
@@ -706,3 +706,4 @@ CONFIG_CRYPTO_SHA512_ARM64=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_CRYPTO_CRC32_ARM64_CE=y
 CONFIG_CRYPTO_POLY_HASH_ARM64_CE=y
+CONFIG_SCHED_FREQ_INPUT=y
